I saw this in the source code. If deleting fails then Kleopatra shows an error message. And then it shows a success message unconditionally.
This problem could happen during the workflow to move a single (sub)key to a smart card.
I saw this in the source code. If deleting fails then Kleopatra shows an error message. And then it shows a success message unconditionally.
This problem could happen during the workflow to move a single (sub)key to a smart card.
| rKLEOPATRA Kleopatra | |||
| rKLEOPATRA32a15bbb4023 Don't show success message on error or cancelation | |||
| rKLEOPATRA807dc2fe7679 Don't show success message on error or cancelation | |||
The (rather trivial) changes where reviewed by Sune. And it's not really a very important issue. Therefore, I'll set it directly to resolved.
When VSD33 has been updated to integrate the fix/commit then this can be closed (i.e. set to vsd-3.3.0) without manual test, in my opinion.