Don't show success message on error or cancelation

GnuPG-bug-id: 7157


(cherry picked from commit 807dc2fe76794a1c54913ba55ff2c7b0ab594230)

Co-authored-by: Ingo Klöcker <dev@ingo-kloecker.de>